<resources>
    <string name="app_name">System Update</string>
    <string name="back">Back</string>
    <string name="auto_download">Auto Download</string>
    <string name="auto_download_tips">Download updates automatically when your headset is idle. Your headset must be charging and connected to Wi-Fi while downloading updates.</string>
    <string name="battery_low_content">Charge the battery to 40% before update</string>
    <string name="low_battery_title">Low Battery</string>
    <string name="cancel_download">Cancel Download</string>
    <string name="cancel_download_content">Installation package update will be cancelled.</string>
    <string name="cancel_download_title">Cancel Download?</string>
    <string name="check_upgrade">Check for Update</string>
    <string name="checking_installation_package">Checking for installation package...</string>
    <string name="clear_memory_content">Not enough storage. Free up some space and try again.</string>
    <string name="continue_download">Continue to Download</string>
    <string name="current_version">Current Version: %s</string>
    <string name="device_latest_version">Your device is up to date</string>
    <string name="download_error_retry">Couldn\'t download package. Try again</string>
    <string name="forbid_copy">Don\'t copy files to the device while it is updating</string>
    <string name="forbid_update">Update option is off. You can turn it on in developer options.</string>
    <string name="i_know">Got it</string>
    <string name="incompatible_package_tips">Your device isn\'t compatible with this version. Download the latest update and try again.</string>
    <string name="installation_package_error_content">Couldn\'t download installation package. Download again</string>
    <string name="more_settings">More Features</string>
    <string name="net_error_tip">Network error. Go to \"Settings\" and check your network</string>
    <string name="no_suitable_installation_package_tip">The installation package can\'t be installed on your device. Try downloading a different package.</string>
    <string name="no_upgrade_package_tip">Update unavailable. Go to the online update page to download.</string>
    <string name="offline_upgrade">Update Offline</string>
    <string name="online_update">Online Update</string>
    <string name="prepare_download">Waiting for download...</string>
    <string name="public_date">Release Date: %s</string>
    <string name="redownload">Retry</string>
    <string name="remain_dowanload_less_than_one_minutes">Downloading... Less than 1 minute left</string>
    <string name="size">Size: %s</string>
    <string name="system_upgrade_content">Install the update and restart the device</string>
    <string name="system_upgrade_title">Update the system?</string>
    <string name="system_upgrading">Updating...</string>
    <string name="systemupdate_setting_auto_update_desc">Update to the latest version automatically when your headset is idle. Your headset must have more than 50% battery when installing updates.</string>
    <string name="systemupdate_setting_auto_update_switch">Auto Update</string>
    <string name="update_checking">Checking for updates...</string>
    <string name="update_now">Update Now</string>
    <string name="update_settings">Update Settings</string>
    <string name="update_version_number">Update Version: %s</string>
    <string name="upgrade">Update</string>
    <string name="update_server">Update Server</string>
    <string name="server_not_set">Not set</string>
    <string name="server_desc">Address of the Source manifest.json (tools/source-ota.py publish), e.g. http://192.168.1.100:8000/</string>
    <string name="find_server_desc">Servers on this network (tools/source-ota.py serve on the PC)</string>
    <string name="searching_server">Searching the local network...</string>
    <string name="server_not_found">No server found. Run tools/source-ota.py serve on a PC in the same network.</string>
    <string name="enter_manually">Enter Manually</string>
    <string name="server_hint">http://</string>
    <string name="save">Save</string>
    <string name="no_server_tip">Set the update server in settings, or update offline</string>
    <string name="preparing_update">Preparing the update. The headset restarts when it is ready.</string>
    <string name="staging_progress">Preparing... %1$d/%2$d</string>
    <string name="install_error">Couldn\'t prepare the update: %s</string>
    <string name="last_update_ok">Last update: version %s installed</string>
    <string name="last_update_result">Last update: %s</string>
    <plurals name="remain_dowanload_n_minutes">
        <item quantity="one">Downloading... %d minute left</item>
        <item quantity="other">Downloading... %d minutes left</item>
    </plurals>
</resources>
